<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>eu.europeana.set</groupId>
	<artifactId>set-api</artifactId>
	<version>0.14-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>User sets API</name>
	<description>User Sets API - API for curating collections by end users</description>

	<modules>
		<module>set-definitions</module>
		<module>set-common</module>
		<module>set-mongo</module>
		<module>set-web</module>
		<module>set-client</module>
		<module>set-search-api-client</module>
		<module>set-integration-testing</module>
		<module>set-usage-stats</module>
	</modules>
	<repositories>
		<repository>
			<id>artifactory.eanadev.org</id>
			<name>artifactory.eanadev.org-releases (external and internal releases)</name>
			<url>https://artifactory-prod.eanadev.org/artifactory/libs-release</url>
		</repository>
		<repository>
			<id>libs-snapshots-local</id>
			<name>europeana-snapshots</name>
			<url>https://artifactory-prod.eanadev.org/artifactory/libs-snapshot</url>
		</repository>
		<repository>
			<id>plugins-release</id>
			<name>artifactory plugins-release</name>
			<url>https://artifactory-prod.eanadev.org/artifactory/plugins-release</url>
		</repository>
	</repositories>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.release>${java.version}</maven.compiler.release>

 		<version.commons.api.sb3>0.1.4-SNAPSHOT</version.commons.api.sb3>

		<!-- Spring Boot 3 is based on Spring Framework 6.0 and Jakarta EE 9.-->
		<spring-framework.version>6.0.11</spring-framework.version>
		<swagger.version>3.0.0</swagger.version>
 		<version.springBoot>3.3.5</version.springBoot>
		<springdoc.version>2.3.0</springdoc.version>

		<!--To have custom date time format for the build info-->
		<build.timestamp>${maven.build.timestamp}</build.timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>

		<!-- overwrite version defined in spring boot parent pom -->
		<mongodb.version>4.7.2</mongodb.version>
		<version.morphia>1.6.1</version.morphia>
		

		<version.httpClient5>5.4.1</version.httpClient5>
		<version.jakarta.annotation>2.1.1</version.jakarta.annotation>
		<version.jakarta-ws.rs>4.0.0</version.jakarta-ws.rs>
		<version.jettison>1.3</version.jettison>
 		<version.junit>5.7.2</version.junit>
		<version.commonsIO>2.8.0</version.commonsIO>
		<jackson.version>2.18.3</jackson.version>
		<!-- java version properties -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<!-- property to be used for add opens jvm arguments in plugins -->
		<java.17.addopens>--add-opens java.base/java.util=ALL-UNNAMED
        	--add-opens java.base/java.lang=ALL-UNNAMED
		</java.17.addopens>

		<!-- test dependencies -->
		<!--
		<version.testcontainers>1.19.7</version.testcontainers>
		-->
		<version.testcontainers>2.0.3</version.testcontainers>
		
		<!-- maven plugins -->
		<version.maven-surefire-plugin>3.0.0-M7</version.maven-surefire-plugin>
		<version.maven-failsafe-plugin>3.0.0-M7</version.maven-failsafe-plugin>
		<git-commit-id.version>5.0.0</git-commit-id.version>

		<sonar.organization>europeana</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.exclusions>**/*.gpg,**/*.template</sonar.exclusions>
        <!-- Exclude POJOs code duplication analysis -->
		<sonar.cpd.exclusions>**/model/**/*</sonar.cpd.exclusions>
		<aggregate.report.xml>set-integration-testing/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.xml>
		<!-- this property needs to be overwritten in modules -->
		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/${aggregate.report.xml}</sonar.coverage.jacoco.xmlReportPaths>
		<argLine></argLine>
		<sonar.java.pmd.reportPaths>${project.build.directory}/pmd.xml</sonar.java.pmd.reportPaths>
		<sonar.java.spotbugs.reportPaths>${project.build.directory}/spotbugsXml.xml</sonar.java.spotbugs.reportPaths>
		
		 
		<!-- sonar - plugins -->
		<jacoco-plugin.version>0.8.11</jacoco-plugin.version>
		<pmd-plugin.version>3.15.0</pmd-plugin.version>
		<spotbugs-plugin.version>4.5.2.0</spotbugs-plugin.version>
		<sonar-plugin.version>3.7.0.1746</sonar-plugin.version>
		
		
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<!-- Import dependency management from Spring Boot (because we don't use Spring-Boot as parent pom)-->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${version.springBoot}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- upgrade mongo driver and morphia to support mongo V6-->
			<!-- SG: for some reason, the versions from spring boot take precedence over the versions from api-commons depencies, therefore we need to replicate here the configs from api-commons -->
			<dependency>
				<groupId>org.mongodb</groupId>
				<artifactId>mongodb-driver-legacy</artifactId>
				<version>${mongodb.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mongodb</groupId>
				<artifactId>mongodb-driver-sync</artifactId>
				<version>${mongodb.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mongodb</groupId>
  				<artifactId>bson</artifactId>
  				<version>${mongodb.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mongodb</groupId>
                <artifactId>mongodb-driver-core</artifactId>
  				<version>${mongodb.version}</version>
			</dependency>
			
			<dependency>
				<groupId>dev.morphia.morphia</groupId>
				<artifactId>core</artifactId>
				<version>${version.morphia}</version>
				<exclusions>
					<exclusion>
						<groupId>org.mongodb</groupId>
						<artifactId>mongodb-driver-sync</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.mongodb</groupId>
						<artifactId>mongodb-driver-legacy</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<!-- excude conflicting dependecies for mongo and logging-->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-data-mongodb</artifactId>
				<version>${version.springBoot}</version>
				<exclusions>
					<exclusion>
						<groupId>ch.qos.logback</groupId>
						<artifactId>logback-classic</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-starter-logging</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.mongodb</groupId>
						<artifactId>mongodb-driver-sync</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.mongodb</groupId>
						<artifactId>mongodb-driver-core</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**</include>
				</includes>
				<excludes>
					<exclude>*.bk</exclude>
			    </excludes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
		

		<!--  plugins to run on build time  -->
		<plugins>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<!--
              <version>${git-commit-id.version}</version>
              -->
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>initialize</phase>
					</execution>
				</executions>
				<configuration>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<includeOnlyProperties>
						<includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
						<includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
						<includeOnlyProperty>git.branch</includeOnlyProperty>
					</includeOnlyProperties>
					<commitIdGenerationMode>full</commitIdGenerationMode>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
        				<jvmArguments>${java.17.addopens}</jvmArguments>
        		</configuration>

				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
						</goals>
						<configuration>
							<additionalProperties>
								<project.description>${project.description}</project.description>
								<!-- For some reason BuildProperties.getName() doesn't return the correct value,
                           so we set the name under a different property                      -->
								<project.name>${project.name}</project.name>
							</additionalProperties>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<!-- Fixes Integration test not finding beans. May be removed with 3.0.0-M6 is available
                    See: https://stackoverflow.com/a/65806777/14530159 -->
					<useModulePath>false</useModulePath>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>add-integration-test-source</id>
						<!-- Normally this would be attached to the generate-test-source phase,
                          however we attach to generate-sources so that the git-code-format plugin can pick
                          up integration test source files (see plugin config above) -->
						<phase>generate-sources</phase>
						<goals>
							<goal>add-test-source</goal>
						</goals>
						<configuration>
							<!-- Configures the source directory of our integration tests -->
							<sources>
								<source>src/integration-test/java</source>
							</sources>
						</configuration>
					</execution>
					<execution>
						<id>add-integration-test-resources</id>
						<phase>generate-test-resources</phase>
						<goals>
							<goal>add-test-resource</goal>
						</goals>
						<configuration>
							<!-- Configures the resource directory of our integration tests -->
							<resources>
								<resource>
									<filtering>true</filtering>
									<directory>src/integration-test/resources</directory>
									<excludes>
										<exclude>*.bk</exclude>
									</excludes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>


		<!--  plugin managmeent -->
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>io.github.git-commit-id</groupId>
					<artifactId>git-commit-id-maven-plugin</artifactId>
					<version>${git-commit-id.version}</version>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${version.springBoot}</version>
				</plugin>
				<plugin>
					<inherited>true</inherited>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${version.maven-surefire-plugin}</version>
					<configuration>
        				<argLine>${argLine} ${java.17.addopens}</argLine>
    				</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>${version.maven-failsafe-plugin}</version>
					<configuration>
        				<argLine>${argLine} ${java.17.addopens}</argLine>
    				</configuration>
				</plugin>
				
				<!--  sonar plugings -->
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>${sonar-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<!-- profiles (for computing code coverage on github) -->
	<profiles>
		<profile>
			<id>coverage</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco-plugin.version}</version>
						<configuration>
							<excludes>
								<!-- see also sonar sonar.coverage.exclusions -->
								<!-- exclude serch api client eventually -->
								<!--
								<exclude>eu/europeana/set/search/**/*.*</exclude>
								-->
								<!-- exclude annotation client package as client tests are not executed -->
								<exclude>**/UsageStatsService.class</exclude>
							</excludes>
						</configuration>
						<executions>
							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<!--
							<execution>
								<id>report</id>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
							-->
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-pmd-plugin</artifactId>
						<!-- Plugin has an indirect dependency on an old version os asm. This is disabled, so we
              can use the asm version specified above. See: https://issueexplorer.com/issue/pmd/pmd/3504#21570220 -->
						<dependencies>
							<dependency>
								<groupId>org.eclipse.sisu</groupId>
								<artifactId>org.eclipse.sisu.plexus</artifactId>
								<version>0.0.0.M2a</version>
								<exclusions>
									<exclusion>
										<groupId>asm</groupId>
										<artifactId>asm</artifactId>
									</exclusion>
								</exclusions>
							</dependency>
						</dependencies>
						<version>${pmd-plugin.version}</version>
						<configuration>
							<rulesets>
								<ruleset>https://raw.githubusercontent.com/europeana/api-commons/master/misc/rulesets/europeana-pmd-ruleset.xml</ruleset>
							</rulesets>
							<printFailingErrors>true</printFailingErrors>
						</configuration>
						<executions>
							<execution>
								<id>aggregate</id>
								<goals>
									<goal>pmd</goal>
								</goals>
								<phase>verify</phase>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>com.github.spotbugs</groupId>
						<artifactId>spotbugs-maven-plugin</artifactId>
						<version>${spotbugs-plugin.version}</version>
						<executions>
							<execution>
								<id>spotbugs</id>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<includeFilterFile>https://raw.githubusercontent.com/europeana/api-commons/master/misc/rulesets/europeana-findbugs-ruleset.xml</includeFilterFile>
							<!--We just want the reports; build should still pass -->
							<failOnError>false</failOnError>
							<!-- Import additional rules from plugins -->
							<plugins>
								<plugin>
									<groupId>com.h3xstream.findsecbugs</groupId>
									<artifactId>findsecbugs-plugin</artifactId>
									<version>1.11.0</version>
								</plugin>
								<plugin>
									<groupId>com.mebigfatguy.fb-contrib</groupId>
									<artifactId>fb-contrib</artifactId>
									<version>7.4.3.sb</version>
								</plugin>
							</plugins>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>